add footer + todo

--- a/assets/index.html
+++ b/assets/index.html
@@ -26,6 +26,12 @@
                 </ul>
             </li>
             {{/rows}}
+        </ul>
+
+        <hr />
+        <footer>
+                <p>{{{poweredByLink}}}</p>
+        </footer>
     </body>
 
 </html>
